# BigBunther

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml  justfile  pyproject.toml
.github/workflows/: docker-publish.yml
src/bigbunther/: .env.example  gif.py  main.py
